# atlassian-cli

./: .gitignore  README.md  jira_issue_get.py  pyproject.toml  requirements.txt
atlassian_cli/: cli.py  confluence.py  jira.py  utils.py
scripts/: __init__.py  common_args.py  confluence_export_pdf.py  confluence_get_page.py  confluence_utils.py  inspect_confluence.py  jira_issue_get.py  jira_issue_search.py  utils.py
tests/: test_cli.py  test_confluence_cli.py  test_confluence_utils.py  test_jira_cli.py
